tests/compile-fail/function_calls/exported_symbol_bad_unwind3.rs
#![feature(unwind_attributes)]

#[unwind(allowed)]
#[no_mangle]
extern "C" fn unwind() {
    panic!();
}

fn main() {
    extern "C" {
        fn unwind();
    }
    unsafe { unwind() }
    //~^ ERROR unwinding past a stack frame that does not allow unwinding
}
